Fixed sticky footer on mobile

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,15 +3,22 @@
 @import "./phoenix.css";
 @import "../../deps/phoenix_live_view/assets/css/live_view.css";
 
+html {
+  height: 100%;
+}
 
+body {
+  height: 100%;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
 
-.footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: #ff9900;
-    color: white;
-    text-align: center;
-    font-size: 1rem
+footer {
+  left: 0;  
+  width: 100%;
+  background-color: #ff9900;
+  color: white;
+  text-align: center;
+  font-size: 1rem;
+  margin-top: 10px; 
 }
